[tool.poetry]
name = "mininet"
version = "0.1.0"
description = ""
authors = ["Oleh Lokshyn <oloks@softserveinc.com>"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.21.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
